@@ -57,9 +57,13 @@
 					<drawimage condition="{current}++eq({indexcoloredButtons}, 1)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonMediumActiveColor" />
 					<drawimage condition="{current}++eq({indexcoloredButtons}, 0)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonMediumActive" />
 				</area>
-				<areascroll condition="not{separator}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="19%" width="47%" layer="3">
+				<areascroll condition="not{separator}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="19%" width="18%" layer="3">
 					<drawtext condition="{current}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}" />
 					<drawtext condition="not{current}" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}" />
+				</areascroll>
+				<areascroll condition="not{separator}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="38%" width="30%" layer="3">
+					<drawtext condition="{current}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{presenteventtitle}" />
+					<drawtext condition="not{current}" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{presenteventtitle}" />
 				</areascroll>
 				<area condition="{separator}" x="19%" width="47%" layer="3">
 					<drawtext x="0" align="center" valign="center" font="{light}" fontsize="70%" color="{clrSeparatorText}" text="{name}" />
@@ -74,9 +78,13 @@
 					<drawimage condition="{current}++eq({indexcoloredButtons}, 1)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonMediumActiveColor" />
 					<drawimage condition="{current}++eq({indexcoloredButtons}, 0)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonMediumActive" />
 				</area>
-				<areascroll condition="not{separator}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="19%" width="42%" layer="3">
+				<areascroll condition="not{separator}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="19%" width="18%" layer="3">
 					<drawtext condition="{current}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}" />
 					<drawtext condition="not{current}" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}" />
+				</areascroll>
+				<areascroll condition="not{separator}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="38%" width="25%" layer="3">
+					<drawtext condition="{current}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{presenteventtitle}" />
+					<drawtext condition="not{current}" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{presenteventtitle}" />
 				</areascroll>
 				<area condition="{separator}" x="19%" width="42%" layer="3">
 					<drawtext x="0" align="center" valign="center" font="{light}" fontsize="70%" color="{clrSeparatorText}" text="{name}" />
@@ -95,20 +103,6 @@
 			<area condition="not{separator}" x="8%" width="6%" layer="4">
 				<drawimage name="logo" imagetype="channellogo" path="{channelid}" x="21%" y="20%" width="65%" height="65%" />
 			</area>
-
-			<!--<areascroll condition="not{separator}++{showChannelDetails}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="50%" width="23%" layer="3">
-				<drawtext x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}" />
-			</areascroll>
-			<area condition="not{separator}++{showChannelDetails}" x="73%" width="21%" layer="3">
-				<drawtext name="menutext" x="0" align="right" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{sourcedescription}, Transp. {transponder}" />
-			</area>-->
-
-			<!--<areascroll condition="not{separator}++{currentInfo}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="19%" width="47%" layer="3">
-				<drawtext name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}" />
-			</areascroll>
-			<area condition="{separator}++{currentInfo}" x="19%" width="47%" layer="3">
-				<drawtext x="0" align="center" valign="center" font="{light}" fontsize="70%" color="{clrSeparatorText}" text="{name}" />
-			</area>-->
 		</listelement>
 
 		<currentelement delay="0" fadetime="{currentelementsFadeTime}">
