@@ -1,6 +1,9 @@
 shady-KISS-skin History
 -------------------------------------------
 
+2015-02-27:
+- Added presenteventtitle to listitems in displaymenuchannel
+
 2015-02-23:
 - Some cosmestics in tvguideng-recmenu
 
